// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TapStack Unit Tests Stack Configuration and Synthesis TapStack should instantiate with custom props and match snapshot 1`] = `
"{
  "output": {
    "DatabaseSecretArn": {
      "description": "ARN of the Secrets Manager secret for the RDS database.",
      "value": "mock-secret-arn"
    },
    "bastionSecurityGroupId": {
      "description": "The ID of the Bastion Host Security Group.",
      "value": "mock-bastion-sg-id"
    },
    "logBucketName": {
      "description": "The name of the S3 bucket for logging.",
      "value": "aurora-prod-logs-mockbucket"
    },
    "rdsInstanceEndpoint": {
      "description": "The connection endpoint for the RDS database instance.",
      "sensitive": true,
      "value": "mock-rds-endpoint.amazonaws.com"
    },
    "rdsSecurityGroupId": {
      "description": "The ID of the RDS Security Group.",
      "value": "mock-rds-sg-id"
    },
    "vpcId": {
      "description": "The ID of the main VPC.",
      "value": "mock-vpc-id"
    }
  },
  "provider": {
    "aws": [
      {
        "default_tags": [
          {
            "tags": {
              "Project": "Aurora"
            }
          }
        ],
        "region": "us-west-2"
      }
    ],
    "random": [
      {
      }
    ]
  },
  "terraform": {
    "backend": {
      "s3": {
        "bucket": "my-custom-state-bucket",
        "encrypt": true,
        "key": "prod/TestCustomStack.tfstate",
        "region": "us-east-1",
        "use_lockfile": true
      }
    },
    "required_providers": {
      "aws": {
        "source": "aws",
        "version": "6.4.0"
      },
      "random": {
        "source": "hashicorp/random",
        "version": "3.7.2"
      }
    }
  }
}"
`;

exports[`TapStack Unit Tests Stack Configuration and Synthesis TapStack should instantiate with default props and match snapshot 1`] = `
"{
  "output": {
    "DatabaseSecretArn": {
      "description": "ARN of the Secrets Manager secret for the RDS database.",
      "value": "mock-secret-arn"
    },
    "bastionSecurityGroupId": {
      "description": "The ID of the Bastion Host Security Group.",
      "value": "mock-bastion-sg-id"
    },
    "logBucketName": {
      "description": "The name of the S3 bucket for logging.",
      "value": "aurora-prod-logs-mockbucket"
    },
    "rdsInstanceEndpoint": {
      "description": "The connection endpoint for the RDS database instance.",
      "sensitive": true,
      "value": "mock-rds-endpoint.amazonaws.com"
    },
    "rdsSecurityGroupId": {
      "description": "The ID of the RDS Security Group.",
      "value": "mock-rds-sg-id"
    },
    "vpcId": {
      "description": "The ID of the main VPC.",
      "value": "mock-vpc-id"
    }
  },
  "provider": {
    "aws": [
      {
        "default_tags": [
        ],
        "region": "us-west-2"
      }
    ],
    "random": [
      {
      }
    ]
  },
  "terraform": {
    "backend": {
      "s3": {
        "bucket": "iac-rlhf-tf-states",
        "encrypt": true,
        "key": "dev/TestDefaultStack.tfstate",
        "region": "us-east-1",
        "use_lockfile": true
      }
    },
    "required_providers": {
      "aws": {
        "source": "aws",
        "version": "6.4.0"
      },
      "random": {
        "source": "hashicorp/random",
        "version": "3.7.2"
      }
    }
  }
}"
`;

exports[`TapStack Unit Tests Stack Configuration and Synthesis TapStack should use defaults when props object is empty 1`] = `
"{
  "output": {
    "DatabaseSecretArn": {
      "description": "ARN of the Secrets Manager secret for the RDS database.",
      "value": "mock-secret-arn"
    },
    "bastionSecurityGroupId": {
      "description": "The ID of the Bastion Host Security Group.",
      "value": "mock-bastion-sg-id"
    },
    "logBucketName": {
      "description": "The name of the S3 bucket for logging.",
      "value": "aurora-prod-logs-mockbucket"
    },
    "rdsInstanceEndpoint": {
      "description": "The connection endpoint for the RDS database instance.",
      "sensitive": true,
      "value": "mock-rds-endpoint.amazonaws.com"
    },
    "rdsSecurityGroupId": {
      "description": "The ID of the RDS Security Group.",
      "value": "mock-rds-sg-id"
    },
    "vpcId": {
      "description": "The ID of the main VPC.",
      "value": "mock-vpc-id"
    }
  },
  "provider": {
    "aws": [
      {
        "default_tags": [
        ],
        "region": "us-west-2"
      }
    ],
    "random": [
      {
      }
    ]
  },
  "terraform": {
    "backend": {
      "s3": {
        "bucket": "iac-rlhf-tf-states",
        "encrypt": true,
        "key": "dev/TestEmptyProps.tfstate",
        "region": "us-east-1",
        "use_lockfile": true
      }
    },
    "required_providers": {
      "aws": {
        "source": "aws",
        "version": "6.4.0"
      },
      "random": {
        "source": "hashicorp/random",
        "version": "3.7.2"
      }
    }
  }
}"
`;
